# agent-audit-kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUDIT_RECORDS.md  EXTENDING.md  FEEDBACK_GUIDE.md  NON_TECH_GUIDE.md  PROPAGATION_SWEEP_2026-07-15.md  PUBLIC_BOUNDARY.md  SHARED_AGENT_CONTRACT.md
examples/: async_audit.py  basic_audit.py  custom_guard.py  langchain_style_wrapper.py  nontech_flow.py  pure_python_agent.py  shared_mapping_agent.py
src/agent_audit_kit/: __init__.py  __main__.py  adapters.py  audit.py  builtins.py  cli.py  evidence.py  gate.py  guard.py  models.py  preflight.py  secret_scan.py
tests/: test_agent_audit_kit.py  test_cli_and_builtins.py  test_shared_contract.py
