[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-audit-kit"
version = "0.1.0"
description = "A small self-audit layer for AI agents: preflight, guardrails, evidence packets, verification gates, and safe candidate outputs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Tam Vi Journal" }
]
keywords = [
  "ai-agents",
  "agent-safety",
  "guardrails",
  "verification",
  "vibe-coding",
  "secret-scanning"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
