[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tamvi-agent-gate"
version = "0.2.0"
description = "A lightweight, versioned preflight and candidate-release gate shared across AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Tam Vi Journal" }
]
keywords = [
  "ai-agents",
  "agent-safety",
  "guardrails",
  "preflight",
  "verification",
  "release-gate",
  "secret-scanning"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
tamvi-agent-gate = "agent_audit_kit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/tamvi-journal/agent-audit-kit"
Issues = "https://github.com/tamvi-journal/agent-audit-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_audit_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
